--- a/Projeto_Jean/nbproject/private/private.properties
+++ b/Projeto_Jean/nbproject/private/private.properties
@@ -1,6 +1,6 @@
 auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
-# No need to modify this property unless customizing JavaFX Ant task infrastructure
+# N\u00e3o h\u00e1 necessidade de se alterar essa propriedade, a menos que se esteja personalizando a infraestrutura da tarefa Ant do JavaFX
 endorsed.javafx.ant.classpath=.
-javafx.run.inbrowser=<Default System Browser>
+javafx.run.inbrowser=<Browser Default do Sistema>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\iexplore.exe
-user.properties.file=C:\\Users\\jeanp\\AppData\\Roaming\\NetBeans\\11.0\\build.properties
+user.properties.file=C:\\Users\\jeanp\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
